fix(Modal): adjust color for dark mode

--- a/packages/themes/src/morpheme/_modal.dark.scss
+++ b/packages/themes/src/morpheme/_modal.dark.scss
@@ -3,5 +3,9 @@
     --v-modal-text-color: var(--color-gray-true-200);
     --v-modal-bg-color: var(--color-gray-true-900);
     --v-modal-title-color: var(--color-gray-true-200);
+
+    &-panel {
+      border: 1px solid var(--color-gray-true-800);
+    }
   }
 }
